# pytorch-op

./: CMakeLists.txt  README.md  add.cpp  add_tensors.cpp  cumsum.cpp  my_add.cpp  test.py  test_add.py  test_cumsum.py
